test/domains/vass/assoc-idxtype-error-2.good
assoc-idxtype-error-2.chpl:2: error: unresolved access of '[DefaultAssociativeDom([domain(1,int(64),false)] range(int(64),bounded,false),true)] int(64)' by '[1]'
